menu children elements spacing fix

--- a/web/css/lte_ie6_css.css
+++ b/web/css/lte_ie6_css.css
@@ -213,7 +213,7 @@ ul.menu li ul.menu_level_1 li.menu2 a:hover {
 
 
 ul.menu li ul.menu_level_1 li.menu2, ul.menu li ul.menu_level_1 li.menu2 ul.menu_level_2 li.menu3{
-    padding: 3px 0px 0px 3px;
+    padding:2px 0px 2px 4px;
 
 }
 
@@ -231,19 +231,19 @@ li.menu3 a:hover{
 }
 
 ul.menu_level_1 li.menu2 a{
-        border: solid 1px #f7f7f7; padding: 1px 0px 1px 4px; position: relative;
+        border: solid 1px #f7f7f7; padding:2px 0px 2px 4px; position: relative;
 }
 ul.menu_level_1 li.menu2 a:hover{
-        border: solid 1px #dadada; padding: 1px 0px 1px 4px;
+        border: solid 1px #dadada; padding:2px 0px 2px 4px;
 }
 
 ul.menu_level_1 li.menu2 ul.menu_level_2 li.menu3 a{
-        border: solid 1px #f7f7f7 !important; padding: 1px 0px 1px 4px;
+        border: solid 1px #f7f7f7 !important; padding:2px 0px 2px 4px;
 }
 ul.menu_level_1 li.menu2 ul.menu_level_2 li.menu3 a:hover{
-        border: solid 1px #f7f7f7 !important; padding: 1px 0px 1px 4px;
+        border: solid 1px #f7f7f7 !important; padding:2px 0px 2px 4px;
 }
 
-.noBorder a:hover {
+.noBorder a:hover , .noBorder:hover a {
   border: 1px solid #f7f7f7 !important;
 }
